--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
-
-  "cSpell.words": ["Clicles","neryad", "neryadg", "Progressindicartor", "Stafull"]
-
+  "cSpell.words": [
+    "Clicles",
+    "neryad",
+    "neryadg",
+    "Progressindicartor",
+    "roboto",
+    "Stafull"
+  ]
 }
