--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,11 @@ environment:
   sdk: ^3.5.3
 
 dependencies:
+  dio: ^5.8.0+1
   flutter:
     sdk: flutter
   google_fonts: ^6.2.1
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
