--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.2.1
   http: ^1.3.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_lints: ^4.0.0
